# homeassistant-addons

./: .editorconfig  .envrc  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  README.md  helper-builder.sh  pkgx.yaml  pyproject.toml  repository.json  taskfile.yml
.devcontainer/: devcontainer.json  supervisor.sh
.github/: FUNDING.yml  dependabot.yml  paths-filter.yml  renovate.json  renovate.json5
__tests__/: jest.config.test.js  package-json.config.test.js
adbs-multi-portal-feeder/: CHANGELOG.md  Dockerfile  README.md  config.json  xbuild.json
adsb-multi-portal-feeder/: CHANGELOG.md  Dockerfile  README.md  build.json  config.json  config.yaml  export-env-from-config.sh
angry-ip-scanner/: CHANGELOG.md  Dockerfile  README.md  config.yaml
angryipscanner/: CHANGELOG.md  Dockerfile  README.md  build.json  build.yaml  config.yaml
awtrix/: CHANGELOG.md  Dockerfile  README.md  build.json  config.yaml
cups/: CHANGELOG.md  Dockerfile  README.md  build.json  config.yaml
cups-dev/: CHANGELOG.md  Dockerfile  README.md  build.json  build.yaml  config.yaml  repository.json
eufy-ha-mqtt-bridge/: CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile-real  README.md  build.json  config.json  docker-entrypoint.sh  run.sh  version-updater.sh
flightradar24-feeder/: .dockerignore  Dockerfile  README.md  build.json  config.json  feed-dl  fr24feed.ini  helper-builder.sh  run.sh
fr24-sharing-key-generator/: CHANGELOG.md  Dockerfile  README.md  build.json  config.yaml  entrypoint.sh  nginx.conf  signup.exp
ioBroker/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.json  (+4 more)
(+141 files in other folders)
